# test

./: CMakeLists.txt  build.bat
Game_Text/: choice_menu_tutorial.txt
SDL2_mixer/cmake/: sdl2_mixer-config.cmake
include/: Bird.cpp  Bird.h  ChoiceMenu.cpp  ChoiceMenu.h  CommonFunction.cpp  CommonFunction.h  Game.cpp  Game.h  Instruct.cpp  Instruct.h  MainMenu.cpp  MainMenu.h  Pipe.cpp  Pipe.h  Restart.cpp  Restart.h  State.cpp  State.h  config.cpp  config.h  main.cpp
